<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/taskinformation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    >

<!--    <CheckBox
        android:id="@+id/taskName"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="2sp"
        android:textSize="30sp"
        android:checked="false"
        />
-->
    <!-- -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <CheckBox
            android:id="@+id/taskName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2sp"
            android:layout_weight="0.6"
            android:textSize="18sp"
            android:focusable="false"

            />

        <TextView
            android:id="@+id/btmove"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/tx_move"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btdel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/bt_del"
            android:textSize="12sp"
            android:focusable="false"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/type" />

        <TextView
            android:id="@+id/tasktype"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/limit" />

        <TextView
            android:id="@+id/taskLimit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
